--- a/style.css
+++ b/style.css
@@ -1,103 +1,147 @@
 * {
-	padding: 0;
-	margin: 0;
-	text-decoration: none;
-	list-style: none;
-	box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: sans-serif;
+  font-family: sans-serif;
 }
 
 nav {
-	background: #778899;
-	height: 100px;
-	width: 100%;
+  background: #778899;
+  height: 100px;
+  width: 100%;
 }
 
+#large-image {
+  height: 450px;
+  width: 100%;
+}
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+.container {
+  position: relative;
+  text-align: center;
+  font-size: 40px;
+  font-family: Brush Script MT, Brush Script Std, cursive;
+  color: white;
+}
+h3 {
+  position: relative;
+  text-align: center;
+  font-size: 40px;
+}
+#aboutus {
+  background-color: gray;
+  width: 100%;
+  height: auto;
+  padding: 50px;
+  border: 1px solid red;
+}
+
+#services{
+	background-color: gray;
+	width: 100%;
+	height: auto;
+	padding: 50px;
+	border: 1px solid red;
+}
+#contactUs{
+	background-color: gray;
+	width: 100%;
+	height: auto;
+	padding: 50px;
+	border: 1px solid red;
+}
 label.logo {
-	color: #fff;
-	font-size: 35px;
-	line-height: 80px;
-	padding: 0 100px;
-	font-weight: bold;
+  color: #fff;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
 }
 
 nav ul {
-	float:right;
-	margin-right: 20px;
+  float: right;
+  margin-right: 20px;
 }
 
 nav ul li {
-	display: inline-block;
-	line-height: 80px;
-	margin: 0 5px;
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
 }
 
 nav ul li a {
-	color: #fff;
-	font-size: 17px;
-	padding: 7px 13px;
-	border-radius: 13px;
-	text-transform: uppercase;
-
+  color: #fff;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 13px;
+  text-transform: uppercase;
 }
 
-a.active, a:hover {
-	background: #1d075f;
-	transition: .5s;
+a.active,
+a:hover {
+  background: #1d075f;
+  transition: 0.5s;
 }
 
 .checkbtn {
-	font-size: 30px;
-	color: #fff;
-	float: right;
-	line-height: 80px;
-	margin-left: 40PX;
-	cursor: pointer;
-	display: none;
+  font-size: 30px;
+  color: #fff;
+  float: right;
+  line-height: 80px;
+  margin-left: 40px;
+  cursor: pointer;
+  display: none;
 }
-#check{
-	display: none;
+#check {
+  display: none;
 }
 @media (max-width: 952px) {
-label.logo{
-	font-size: 30px;
-	padding-left: 50px;
+  label.logo {
+    font-size: 30px;
+    padding-left: 50px;
   }
   nav ul li a {
-	font-size: 16px;
+    font-size: 16px;
   }
 }
 @media (max-width: 858px) {
-    .checkbtn {
-			display: block;
-		}
+  .checkbtn {
+    display: block;
+  }
 
-		ul {
-			position: fixed;
-			width: 100%;
-			height: 100vh;
-			background: #1d075f;
-			top: 80px;
-			left: -100%;
-			text-align: center;
-			transition: all .5s;
-		}
-		nav ul li {
-			display: block;
-			margin: 50px 0;
-			line-height: 30px;
-		}
-		nav ul li a {
-			font-size: 20px;
-		}
-		a:active, a:hover {
-			background: none;
-			color: #5434af;
-		}
-		#check:checked ~ ul {
-			left: 0;
-		}
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #1d075f;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  a:active,
+  a:hover {
+    background: none;
+    color: #5434af;
+  }
+  #check:checked ~ ul {
+    left: 0;
+  }
 }
