--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@ nav {
   width: 100%;
 }
 
-#large-image {
-  height: 450px;
-  width: 100%;
+.large-image {
+	background-color: gray;
+	width: 100%;
+	height: 450px;
+	padding: 50px;
+	border: 1px solid red;
 }
 .top-left {
   position: absolute;
@@ -26,6 +29,8 @@ nav {
   left: 16px;
 }
 .container {
+  margin-top: 2px;
+  margin-bottom: 2px;
   position: relative;
   text-align: center;
   font-size: 40px;
@@ -38,6 +43,21 @@ h3 {
   font-size: 40px;
 }
 #aboutus {
+  background-color:grey;
+  width: 100%;
+  height: auto;
+  padding: 50px;
+  border: 1px solid red;
+}
+
+#services {
+  background-color: gray;
+  width: 100%;wray
+  height: auto;
+  padding: 50px;
+  border: 1px solid red;
+}
+#contactUs {
   background-color: gray;
   width: 100%;
   height: auto;
@@ -45,20 +65,17 @@ h3 {
   border: 1px solid red;
 }
 
-#services{
-	background-color: gray;
-	width: 100%;
-	height: auto;
-	padding: 50px;
-	border: 1px solid red;
-}
-#contactUs{
-	background-color: gray;
-	width: 100%;
-	height: auto;
-	padding: 50px;
-	border: 1px solid red;
-}
+  @media (max-width: 952px) {
+	.container {
+	  font-size: 20px;
+	}
+  }
+  @media (max-width: 952px) {
+	h3 {
+	  font-size: 18px;
+	}
+  }
+
 label.logo {
   color: #fff;
   font-size: 35px;
@@ -110,7 +127,7 @@ a:hover {
     padding-left: 50px;
   }
   nav ul li a {
-    font-size: 16px;
+    font-size: 15px;
   }
 }
 @media (max-width: 858px) {
@@ -145,3 +162,5 @@ a:hover {
     left: 0;
   }
 }
+
+  
