--- a/style.css
+++ b/style.css
@@ -16,28 +16,16 @@ nav {
 
 }
 
-.large-image {
-	background-color: grey;
-	width: 100%;
-	height: 450px;
-	padding: 50px;
-	border: 1px solid red;
-}
-.top-left {
-  position: absolute;
-  top: 8px;
-  left: 16px;
-}
 .container {
-  margin-top:0 2px;
-  margin-bottom:0 2px;
-  position: relative;
-  text-align: center;
-  font-size: 40px;
-  font-family: 'Cookie', cursive;
-  font-family: 'Oxygen', sans-serif;
-  color: white;
+  height: 100vh;
+  background-image: url(images/charlotte.jpeg);
+  background-repeat: no-repeat;
+  background-position:center;
+  background-size:cover;
+  background-attachment: fixed;
+
 }
+
 h3 {
   position: relative;
   text-align: center;
@@ -56,10 +44,10 @@ h2 {
 #aboutus {
   background-color:hsl(60, 18%, 85%);
   width: 100%;
-  height: auto;
-  padding: 90px;
+  height: 100vh;
+  padding: 100px;
   border: 1px solid black;
-  
+
 }
 
 #services {
@@ -77,10 +65,7 @@ h2 {
   border: 1px solid red;
 }
 
-  @media (max-width: 865px) {
-	.container {
-	  font-size: 20px;
-	}
+
   }
   @media (max-width: 865px) {
 	h3 {
@@ -106,13 +91,7 @@ h2 {
 
   }
 
-label.logo {
-  color: #fff;
-  font-size: 35px;
-  line-height: 80px;
-  padding: 0 100px;
-  font-weight: bold;
-}
+
 
 nav ul {
   float: right;
@@ -166,7 +145,7 @@ label #btn , label #cancel {
   display: none;
 }
 @media (max-width: 944px) {
-  label.logo {
+  label.img {
     left: 6%;
     top: 20px;
     width: 130px;
@@ -181,7 +160,7 @@ label #btn , label #cancel {
   }
 
   ul {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100vh;
     background: #34495e;
@@ -193,7 +172,7 @@ label #btn , label #cancel {
   }
   nav ul li {
     display: block;
-    margin: 50px 0;
+    margin: 20px 0;
     line-height: 30px;
   }
   nav ul li a {
