--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-@import url (href="https://fonts.googleapis.com/css?family=Tangerine">);
+
 body{
-  font-family: 'open sans' , sans-serif;
+  font-family:'open-sans',serif;
+  font-size: 80px;
+  font-weight: bold;
+  font-style: italic;
+
 }
 * {
   padding: 0;
@@ -11,18 +15,26 @@ body{
 }
 
 nav {
-  background: #778899;
-  height: 100px;
+  background: #0d0d0d;
+  height: 150px;
 
 }
 
 .container {
   height: 100vh;
-  background-image: url(images/charlotte.jpeg);
+  background-image: url(images/charlotte.jpg);
   background-repeat: no-repeat;
   background-position:center;
   background-size:cover;
   background-attachment: fixed;
+  text-align: center;
+  font-size: 90px;
+  color: #e8a90e;
+  font-family:'Tangerine',serif;
+  font-weight: normal;
+  text-shadow: 3px 3px black;
+
+
 
 }
 
@@ -44,7 +56,7 @@ h2 {
 #aboutus {
   background-color:hsl(60, 18%, 85%);
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   padding: 100px;
   border: 1px solid black;
 
@@ -90,8 +102,11 @@ h2 {
 	 }
 
   }
-
-
+nav img{
+  width: 150px;
+  position:absolute;
+  left: 5%;
+}
 
 nav ul {
   float: right;
@@ -106,9 +121,9 @@ nav ul li {
 
 nav ul li a {
   position: relative;
-  color: white;
+  color: #e8a90e;
   font-size: 18px;
-  padding: 5px 0;
+  padding: 0 10px;
   text-transform: uppercase;
 }
 
@@ -144,16 +159,12 @@ label #btn , label #cancel {
 #check {
   display: none;
 }
-@media (max-width: 944px) {
-  label.img {
-    left: 6%;
-    top: 20px;
-    width: 130px;
-  }
+
+
   nav ul li a {
     font-size: 17px;
   }
-}
+
 @media (max-width: 860px) {
   label #btn {
     display: block;
@@ -163,8 +174,8 @@ label #btn , label #cancel {
     position: absolute;
     width: 100%;
     height: 100vh;
-    background: #34495e;
-    top: 80px;
+    background:#0d0d0d;
+    top: 100px;
     left: -100%;
     text-align: center;
     transition: all .5s;
@@ -173,7 +184,7 @@ label #btn , label #cancel {
   nav ul li {
     display: block;
     margin: 20px 0;
-    line-height: 30px;
+    line-height:30px;
   }
   nav ul li a {
     font-size: 20px;
