--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url (href="https://fonts.googleapis.com/css?family=Tangerine">);
-body{
-  font-family: 'open sans' , sans-serif;
+@import url (href= "https://fonts.googleapis.com/css?family=Tangerine" >);
+body {
+  font-family: "open sans", sans-serif;
 }
 * {
   padding: 0;
@@ -13,41 +13,38 @@ body{
 nav {
   background: #778899;
   height: 100px;
-
 }
 
 .container {
   height: 100vh;
   background-image: url(images/charlotte.jpeg);
   background-repeat: no-repeat;
-  background-position:center;
-  background-size:cover;
+  background-position: center;
+  background-size: cover;
   background-attachment: fixed;
-
 }
 
 h3 {
   position: relative;
   text-align: center;
   font-size: 40px;
-  color:rgb(153, 153, 255);
+  color: whitesmoke;
 }
 h2 {
-	position: relative;
-	text-align: center;
-	font-size: 20px;
-	padding-left: 300px;
-	padding-right: 300px;
-	margin-top: 4px;
-	color:hsl(60, 20%, 60%);
+  position: relative;
+  text-align: center;
+  font-size: 20px;
+  padding-left: 300px;
+  padding-right: 300px;
+  margin-top: 18px;
+  color: hsl(60, 20%, 60%);
 }
 #aboutus {
-  background-color:hsl(60, 18%, 85%);
+  background-color: rgba(0, 0, 0, 0.9);
   width: 100%;
   height: 100vh;
   padding: 100px;
   border: 1px solid black;
-
 }
 
 #services {
@@ -57,41 +54,41 @@ h2 {
   padding: 50px;
   border: 1px solid red;
 }
-#contactus {
+.contactus {
   background-color: gray;
   width: 100%;
   height: auto;
   padding: 50px;
   border: 1px solid red;
 }
+.form-group{
+  position: relative;
+	text-align: center;
+	font-size: 20px;
+}
 
-
+@media (max-width: 865px) {
+  h3 {
+    font-size: 30px;
   }
-  @media (max-width: 865px) {
-	h3 {
-	  font-size: 30px;
-	}
-	h3{
-		padding-bottom: 7px;
-	}
+  h3 {
+    padding-bottom: 7px;
   }
-  @media (max-width: 952px){
-     h2 {
-		 font-size: 14px;
-	 }
-	 h2{
-		padding-left: 0px;
-	 }
-	 h2{
-		padding-right: 0px;
-	 }
-	 h2{
-		 margin-top: 7px;
-	 }
-
+}
+@media (max-width: 952px) {
+  h2 {
+    font-size: 14px;
   }
-
-
+  h2 {
+    padding-left: 0px;
+  }
+  h2 {
+    padding-right: 0px;
+  }
+  h2 {
+    margin-top: 7px;
+  }
+}
 
 nav ul {
   float: right;
@@ -124,14 +121,14 @@ nav ul li a:before {
   transform-origin: right;
 }
 
-
 nav ul li a:hover:before {
   transform: scaleX(1);
   transform-origin: left;
-  transition: transform .4s linear;
+  transition: transform 0.4s linear;
 }
 
-label #btn , label #cancel {
+label #btn,
+label #cancel {
   color: white;
   font-size: 30px;
   float: right;
@@ -167,8 +164,7 @@ label #btn , label #cancel {
     top: 80px;
     left: -100%;
     text-align: center;
-    transition: all .5s;
-
+    transition: all 0.5s;
   }
   nav ul li {
     display: block;
@@ -178,16 +174,15 @@ label #btn , label #cancel {
   nav ul li a {
     font-size: 20px;
   }
+}
+#check:checked ~ ul {
+  left: 0;
+}
 
-  }
-  #check:checked ~ ul {
-    left: 0;
-  }
+#check:checked ~ label #btn {
+  display: none;
+}
 
-  #check:checked ~ label #btn {
-    display: none;
-  }
-
-  #check:checked ~ label #cancel {
-    display: block;
-  }
+#check:checked ~ label #cancel {
+  display: block;
+}
