--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-
-body{
-  font-family:'open-sans',serif;
+body {
+  font-family: "open-sans", serif;
   font-size: 80px;
   font-weight: bold;
   font-style: italic;
-
 }
 * {
   padding: 0;
@@ -17,94 +15,109 @@ body{
 nav {
   background: #0d0d0d;
   height: 150px;
-
 }
 
 .container {
   height: 100vh;
   background-image: url(images/charlotte.jpg);
   background-repeat: no-repeat;
-  background-position:center;
-  background-size:cover;
+  background-position: center;
+  background-size: cover;
   background-attachment: fixed;
   text-align: center;
   font-size: 90px;
   color: #e8a90e;
-  font-family:'Tangerine',serif;
+  font-family: "Tangerine", serif;
   font-weight: normal;
   text-shadow: 3px 3px black;
-
-
-
 }
 
 h3 {
   position: relative;
   text-align: center;
   font-size: 40px;
-  color:rgb(153, 153, 255);
+  color: rgb(153, 153, 255);
 }
 h2 {
-	position: relative;
-	text-align: center;
-	font-size: 20px;
-	padding-left: 300px;
-	padding-right: 300px;
-	margin-top: 4px;
-	color:hsl(60, 20%, 60%);
+  position: relative;
+  text-align: center;
+  font-size: 20px;
+  padding-left: 300px;
+  padding-right: 300px;
+  margin-top: 4px;
+  color: hsl(60, 20%, 60%);
 }
 #aboutus {
-  background-color:hsl(60, 18%, 85%);
+  background-color: whitesmoke;
   width: 100%;
   height: 120vh;
   padding: 100px;
-  border: 1px solid black;
-
+  border: 1px ;
 }
 
 #services {
-  background-color: gray;
+  background-color: whitesmoke;
   width: 100%;
   height: auto;
   padding: 50px;
-  border: 1px solid red;
+  border: 1px ;
 }
 #contactus {
-  background-color: gray;
+  background-color:whitesmoke;
   width: 100%;
   height: auto;
-  padding: 50px;
-  border: 1px solid red;
+  border: 1px;
 }
 
+section#contactUs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:  whitesmoke;
+}
+.form-group input {
+  width: 100%;
+  padding: 5px;
+  font-size: 18px;
+  border: 1px solid;
+  margin-top: 5px;
+}
 
+@media (max-width: 865px) {
+  h3 {
+    font-size: 30px;
   }
-  @media (max-width: 865px) {
-	h3 {
-	  font-size: 30px;
-	}
-	h3{
-		padding-bottom: 7px;
-	}
+  h3 {
+    padding-bottom: 7px;
   }
-  @media (max-width: 952px){
-     h2 {
-		 font-size: 14px;
-	 }
-	 h2{
-		padding-left: 0px;
-	 }
-	 h2{
-		padding-right: 0px;
-	 }
-	 h2{
-		 margin-top: 7px;
-	 }
+}
+@media (max-width: 952px) {
+  h2 {
+    font-size: 14px;
+  }
+  h2 {
+    padding-left: 0px;
+  }
+  h2 {
+    padding-right: 0px;
+  }
+  h2 {
+    margin-top: 7px;
+  }
+}
 
-  }
-nav img{
+label {
+  font-family: montserrat;
+  font-size: 20px;
+}
+.form-group {
+  width: 100%;
+  margin-top: 20px;
+  font-size: 20px;
+}
+nav img {
   width: 150px;
-  position:absolute;
+  position: absolute;
   left: 5%;
 }
 
@@ -139,14 +152,14 @@ nav ul li a:before {
   transform-origin: right;
 }
 
-
 nav ul li a:hover:before {
   transform: scaleX(1);
   transform-origin: left;
-  transition: transform .4s linear;
+  transition: transform 0.4s linear;
 }
 
-label #btn , label #cancel {
+label #btn,
+label #cancel {
   color: white;
   font-size: 30px;
   float: right;
@@ -160,10 +173,9 @@ label #btn , label #cancel {
   display: none;
 }
 
-
-  nav ul li a {
-    font-size: 17px;
-  }
+nav ul li a {
+  font-size: 17px;
+}
 
 @media (max-width: 860px) {
   label #btn {
@@ -174,31 +186,29 @@ label #btn , label #cancel {
     position: absolute;
     width: 100%;
     height: 100vh;
-    background:#0d0d0d;
+    background: #0d0d0d;
     top: 100px;
     left: -100%;
     text-align: center;
-    transition: all .5s;
-
+    transition: all 0.5s;
   }
   nav ul li {
     display: block;
     margin: 20px 0;
-    line-height:30px;
+    line-height: 30px;
   }
   nav ul li a {
     font-size: 20px;
   }
+}
+#check:checked ~ ul {
+  left: 0;
+}
 
-  }
-  #check:checked ~ ul {
-    left: 0;
-  }
+#check:checked ~ label #btn {
+  display: none;
+}
 
-  #check:checked ~ label #btn {
-    display: none;
-  }
-
-  #check:checked ~ label #cancel {
-    display: block;
-  }
+#check:checked ~ label #cancel {
+  display: block;
+}
