--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ nav {
   background: #0d0d0d;
   height: 150px;
 }
-
+/*background container*/
 .container {
   height: 100vh;
   background-image: url(images/charlotte.jpg);
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-position: top;
+  background-size: 250%;
   background-attachment: fixed;
   text-align: center;
   font-size: 90px;
@@ -31,6 +31,7 @@ nav {
   font-weight: normal;
   text-shadow: 3px 3px black;
 }
+
 
 h3 {
   position: relative;
@@ -47,6 +48,7 @@ h2 {
   margin-top: 4px;
   color: hsl(60, 20%, 60%);
 }
+/*aboutus*/
 #aboutus {
   background-color: whitesmoke;
   width: 100%;
@@ -54,7 +56,7 @@ h2 {
   padding: 100px;
   border: 1px ;
 }
-
+/*sevices*/
 #services {
   background-color: whitesmoke;
   width: 100%;
@@ -62,6 +64,37 @@ h2 {
   padding: 50px;
   border: 1px ;
 }
+.services{
+  padding: 20%;
+  text-align: center;
+
+}
+.service1{
+  display: block;
+  margin-top: 50px;
+  display: flex;
+}
+.service-items{
+  width: 35%
+}
+.service-items img {
+  width:100%;
+  height:150px;
+  display: flex;
+
+}
+@media (max-width: 850px) {
+  .service-items{
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 190px;
+    width: 200px;
+  }
+
+
+}
+
 #contactus {
   background-color:whitesmoke;
   width: 100%;
@@ -115,6 +148,7 @@ label {
   margin-top: 20px;
   font-size: 20px;
 }
+/*navbar*/
 nav img {
   width: 150px;
   position: absolute;
