--- a/style.css
+++ b/style.css
@@ -60,36 +60,82 @@ h2 {
 #services {
   background-color: whitesmoke;
   width: 100%;
-  height: auto;
-  padding: 50px;
+  height: 100%;
+  padding: 100px;
   border: 1px ;
 }
 .services{
-  padding: 20%;
+  padding: 50%;
   text-align: center;
 
 }
 .service1{
-  display: block;
+  display: flex;
   margin-top: 50px;
-  display: flex;
-}
-.service-items{
-  width: 35%
-}
-.service-items img {
-  width:100%;
-  height:150px;
-  display: flex;
+  padding-top: 80px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 30px;
 
 }
-@media (max-width: 850px) {
-  .service-items{
+/*service img*/
+.service-items img{
+  width: 250px;
+  height: 150px;
+  margin-top: 100px;
+}
+.service-items1 img{
+  width: 250px;
+  height: 150px;
+  margin-top: 100px;
+
+}
+.service-items2 img{
+  width: 250px;
+  height: 150px;
+  margin-top: 100px;
+
+}
+.service-items3 img{
+  width: 250px;
+  height: 150px;
+  margin-top: 100px;
+
+}
+@media (max-width: 750px) {
+  .service1{
+    display: block;
+  }
+
+}
+@media (max-width: 750px) {
+  .service-items {
     margin-top: 15px;
-    margin-left: 5px;
+    margin-left: -100px;
     margin-right: 5px;
-    height: 190px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
+  }
+  .service-items1{
+    margin-top: 15px;
+    margin-left: -100px;
+    margin-right: 5px;
+    height: 300px;
+    width: 300px;
+  }
+  .service-items2{
+    margin-top: 15px;
+    margin-left: -100px;
+    margin-right: 5px;
+    height: 300px;
+    width: 300px;
+  }
+  .service-items3{
+    margin-top: 15px;
+    margin-left: -100px;
+    margin-right: 5px;
+    height: 300px;
+    width: 300px;
   }
 
 
@@ -144,7 +190,7 @@ section#contactUs {
        width: 200px;
      }
    }
-  
+
 
 @media (max-width: 865px) {
   h3 {
