--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ h2 {
   margin-top: 4px;
   color: hsl(60, 20%, 60%);
 }
+
+h4{
+  font-size: 16px;
+}
 #aboutus {
   background-color: whitesmoke;
   width: 100%;
@@ -93,6 +97,17 @@ section#contactUs {
   .cleaningtwo{
    width: 380px;
    height: 270px;
+  }
+  button{
+    width: 100%;
+  }
+
+  @media(max-width: 865px){
+    .form-group input{
+      width: 70%;
+      font-size: 10px;
+    }
+   
   }
   @media (max-width: 865px) {
    .cleaningone {
