--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: "open-sans", serif;
   font-size: 80px;
   font-weight: bold;
-  font-style: italic;
+  font-style:  normal;
 }
 * {
   padding: 0;
@@ -24,6 +24,7 @@ nav {
   background-position: top;
   background-size: 250%;
   background-attachment: fixed;
+  background-color: black;
   text-align: center;
   font-size: 90px;
   color: #e8a90e;
@@ -48,10 +49,7 @@ h2 {
   margin-top: 4px;
   color: hsl(60, 20%, 60%);
 }
-
-h4{
-  font-size: 16px;
-}
+/*aboutus*/
 #aboutus {
   background-color: whitesmoke;
   width: 100%;
@@ -67,6 +65,10 @@ h4{
   padding: 100px;
   border: 1px ;
 }
+/*sevice title size*/
+.title {
+  font-size: 60px;
+}
 .services{
   padding: 50%;
   text-align: center;
@@ -76,7 +78,7 @@ h4{
   display: flex;
   margin-top: 50px;
   padding-top: 80px;
-  padding-right: 30px;
+  padding-right: 50px;
   padding-bottom: 50px;
   padding-left: 30px;
 
@@ -104,6 +106,12 @@ h4{
   height: 150px;
   margin-top: 100px;
 
+}
+h3{
+  font-family: "Tangerine";
+  color:#e8a90e;
+  font-size: 50px;
+  text-shadow: 3px 3px black;
 }
 @media (max-width: 750px) {
   .service1{
@@ -175,21 +183,6 @@ section#contactUs {
   .cleaningtwo{
    width: 380px;
    height: 270px;
-  }
-  button{
-    width: 100%;
-  }
-
-  @media(max-width: 865px){
-    .form-group input{
-      width: 70%;
-      font-size: 10px;
-    }
-<<<<<<< HEAD
-
-=======
-   
->>>>>>> 9827666f47bcf83bc626710bc5766c4195d47657
   }
   @media (max-width: 865px) {
    .cleaningone {
