--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: "open-sans", serif;
   font-size: 80px;
   font-weight: bold;
-  font-style: italic;
+  font-style:  normal;
 }
 * {
   padding: 0;
@@ -24,6 +24,7 @@ nav {
   background-position: top;
   background-size: 250%;
   background-attachment: fixed;
+  background-color: black;
   text-align: center;
   font-size: 90px;
   color: #e8a90e;
@@ -64,6 +65,10 @@ h2 {
   padding: 100px;
   border: 1px ;
 }
+/*sevice title size*/
+.title {
+  font-size: 60px;
+}
 .services{
   padding: 50%;
   text-align: center;
@@ -73,7 +78,7 @@ h2 {
   display: flex;
   margin-top: 50px;
   padding-top: 80px;
-  padding-right: 30px;
+  padding-right: 50px;
   padding-bottom: 50px;
   padding-left: 30px;
 
@@ -101,6 +106,12 @@ h2 {
   height: 150px;
   margin-top: 100px;
 
+}
+h3{
+  font-family: "Tangerine";
+  color:#e8a90e;
+  font-size: 50px;
+  text-shadow: 3px 3px black;
 }
 @media (max-width: 750px) {
   .service1{
