--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -18,19 +18,26 @@ nav {
 }
 /*background container*/
 .container {
-  height: 100vh;
-  background-image: url(images/charlotte.jpg);
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: 250%;
-  background-attachment: fixed;
   background-color: black;
   text-align: center;
   font-size: 90px;
   color: #e8a90e;
   font-family: "Tangerine", serif;
   font-weight: normal;
-  text-shadow: 3px 3px black;
+}
+.container1{
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 750px) {
+  .conatiner1 {
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 190px;
+    width: 200px;
+  }
 }
 
 
@@ -64,6 +71,12 @@ h2 {
   height: 100%;
   padding: 100px;
   border: 1px ;
+}
+.disciption li{
+  font-size: 20px;
+  text-align: center;
+  color: black;
+
 }
 /*sevice title size*/
 .title {
@@ -111,7 +124,7 @@ h3{
   font-family: "Tangerine";
   color:#e8a90e;
   font-size: 50px;
-  text-shadow: 3px 3px black;
+  text-shadow: 2px 2px black;
 }
 @media (max-width: 750px) {
   .service1{
@@ -172,7 +185,23 @@ section#contactUs {
   border: 1px solid;
   margin-top: 5px;
 }
-
+/*submit button style*/
+.submit{
+  border-radius: 4px;
+  font-size: 15px;
+  width: 50px;
+  float: center;
+}
+button:hover{
+  border-radius: 4px;
+  font-size: 15px;
+  border: 2px solid black;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+/*aboutus img*/
 .cleaningone{
   width: 380px;
   height: 270px;
@@ -306,7 +335,6 @@ nav ul li a {
   ul {
     position: absolute;
     width: 100%;
-    height: 100vh;
     background: #0d0d0d;
     top: 100px;
     left: -100%;
