--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -18,7 +18,8 @@ nav {
 }
 /*background container*/
 .container {
-  background-color: black;
+  background-position: bottom;
+  background-color: #0d0d0d;
   text-align: center;
   font-size: 90px;
   color: #e8a90e;
@@ -27,7 +28,7 @@ nav {
 }
 .container1{
   width: 100%;
-  height: 100%;
+  height: 150%;
 }
 
 @media (max-width: 750px) {
@@ -58,37 +59,40 @@ h2 {
 }
 /*aboutus*/
 #aboutus {
-  background-color: whitesmoke;
+  background-color: #0d0d0d;
   width: 100%;
   height: 120vh;
   padding: 100px;
   border: 1px ;
 }
+.aboutus1 h2{
+  color: #fffdd0;
+}
 /*sevices*/
 #services {
-  background-color: whitesmoke;
+  background-color: #0d0d0d;
   width: 100%;
   height: 100%;
   padding: 100px;
-  border: 1px ;
-}
-.disciption li{
-  font-size: 20px;
-  text-align: center;
-  color: black;
-
+  padding-left: 50px;
 }
 /*sevice title size*/
 .title {
   font-size: 60px;
 }
+
+@media (max-width: 865px) {
+  .title {
+    font-size: 30px;
+  }
+}
 .services{
-  padding: 50%;
+  padding: 150%;
   text-align: center;
 
 }
 .service1{
-  display: flex;
+  display: grid;
   margin-top: 50px;
   padding-top: 80px;
   padding-right: 50px;
@@ -98,26 +102,27 @@ h2 {
 }
 /*service img*/
 .service-items img{
-  width: 250px;
-  height: 150px;
-  margin-top: 100px;
+  width: 50%;
+  height: 50%;
+  margin-top: 50px;
+
 }
 .service-items1 img{
-  width: 250px;
-  height: 150px;
-  margin-top: 100px;
+  width: 50%;
+  height: 50%;
+  margin-top: 50px;
 
 }
 .service-items2 img{
-  width: 250px;
-  height: 150px;
-  margin-top: 100px;
+  width: 50%;
+  height: 50%;
+  margin-top: 50px;
 
 }
 .service-items3 img{
-  width: 250px;
-  height: 150px;
-  margin-top: 100px;
+  width: 50%;
+  height: 50%;
+  margin-top: 50px;
 
 }
 h3{
@@ -126,37 +131,37 @@ h3{
   font-size: 50px;
   text-shadow: 2px 2px black;
 }
-@media (max-width: 750px) {
+@media (max-width: 865px) {
   .service1{
     display: block;
   }
 
 }
-@media (max-width: 750px) {
+@media (max-width: 865px) {
   .service-items {
     margin-top: 15px;
-    margin-left: -100px;
+    margin-left:  -50px;
     margin-right: 5px;
     height: 300px;
     width: 300px;
   }
   .service-items1{
     margin-top: 15px;
-    margin-left: -100px;
+    margin-left:-50px;
     margin-right: 5px;
     height: 300px;
     width: 300px;
   }
   .service-items2{
     margin-top: 15px;
-    margin-left: -100px;
+    margin-left: -50px;
     margin-right: 5px;
     height: 300px;
     width: 300px;
   }
   .service-items3{
     margin-top: 15px;
-    margin-left: -100px;
+    margin-left:  -50px;
     margin-right: 5px;
     height: 300px;
     width: 300px;
@@ -166,7 +171,7 @@ h3{
 }
 
 #contactus {
-  background-color:whitesmoke;
+  background-color:#0d0d0d;
   width: 100%;
   height: auto;
   border: 1px;
@@ -176,7 +181,11 @@ section#contactUs {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color:  whitesmoke;
+  background-color: #0d0d0d;
+}
+/*contactform*/
+.form-group h4{
+  color: #fffdd0;
 }
 .form-group input {
   width: 100%;
@@ -189,13 +198,13 @@ section#contactUs {
 .submit{
   border-radius: 4px;
   font-size: 15px;
-  width: 50px;
+  width: 60px;
   float: center;
 }
 button:hover{
   border-radius: 4px;
   font-size: 15px;
-  border: 2px solid black;
+  border: 2px solid white;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
   cursor: pointer;
   -webkit-transition-duration: 0.4s; /* Safari */
@@ -206,7 +215,7 @@ button:hover{
   width: 380px;
   height: 270px;
   margin-top: 100px;
-  margin-left: 190px;
+  margin-left: 120px;
   margin-right: 50px;
   }
   .cleaningtwo{
@@ -216,7 +225,7 @@ button:hover{
   @media (max-width: 865px) {
    .cleaningone {
      margin-top: 15px;
-     margin-left: 5px;
+     margin-left: -11px;
      margin-right: 5px;
      height: 190px;
      width: 200px;
@@ -225,7 +234,7 @@ button:hover{
    @media (max-width: 865px) {
      .cleaningtwo {
        margin-top: 15px;
-       margin-left: 1px;
+       margin-left: -11px;
        height: 190px;
        width: 200px;
      }
@@ -265,8 +274,8 @@ label {
   font-size: 20px;
 }
 /*navbar*/
-nav img {
-  width: 150px;
+.logo1{
+  max-width: 150px;
   position: absolute;
   left: 5%;
 }
